<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_thongKe"
            android:title="@string/nav_thongKe"
            android:icon="@drawable/ic_thongke"/>
        <item android:id="@+id/nav_QLTC"
            android:title="@string/nav_QLTC"
            android:icon="@drawable/ic_qltc"/>
        <item android:id="@+id/nav_PLTC"
            android:title="@string/nav_PLTC"
            android:icon="@drawable/ic_pltc"/>
    </group>

    <item android:title="Information">
        <menu>
            <item android:id="@+id/nav_info"
                android:title="@string/nav_info"
                android:icon="@drawable/ic_info"/>
            <item android:id="@+id/nav_exit"
                android:title="@string/nav_exit"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>

</menu>